--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Adapters\Adapters.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
+    <Using Include="SL.Common" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.IO.Compression" />
@@ -69,4 +70,14 @@
       <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll' OR '%(Filename)%(Extension)' == 'SQLitePCLRaw.batteries_v2.dll'" />
     </ItemGroup>
   </Target>
+  <ItemGroup>
+    <EditorConfigFiles Remove="X:\src\my-blish-modules\src\ChatLinks\Migrations\.editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="X:\src\my-blish-modules\src\ChatLinks\.editorconfig" />
+    <None Include="X:\src\my-blish-modules\src\ChatLinks\Migrations\.editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
+    <EditorConfigFiles Remove="X:\src\my-blish-modules\src\ChatLinks\.editorconfig" />
+  </ItemGroup>
 </Project>
