--- a/src/ChatLinks/Migrations/.editorconfig
+++ b/src/ChatLinks/Migrations/.editorconfig
@@ -2,3 +2,6 @@
 
 # CA1062: Validate arguments of public methods
 dotnet_diagnostic.CA1062.severity = none
+
+# CA1724: Type names should not match namespaces
+dotnet_diagnostic.CA1724.severity = none
