--- a/.editorconfig
+++ b/.editorconfig
@@ -406,3 +406,7 @@ dotnet_code_quality.CA1062.null_check_validation_methods = ThrowIfNull
 
 # CA1848: Use the LoggerMessage delegates
 dotnet_diagnostic.CA1848.severity = none
+
+# CA2000: Dispose objects before losing scope
+dotnet_diagnostic.CA2000.severity = none
+
