Disable IDE0058 for ef migrations

--- a/src/ChatLinks/Migrations/.editorconfig
+++ b/src/ChatLinks/Migrations/.editorconfig
@@ -5,3 +5,6 @@ dotnet_diagnostic.CA1062.severity = none
 
 # CA1724: Type names should not match namespaces
 dotnet_diagnostic.CA1724.severity = none
+
+# IDE0058: Expression value is never used
+dotnet_diagnostic.IDE0058.severity = none
