--- a/src/ChatLinks/manifest.json
+++ b/src/ChatLinks/manifest.json
@@ -26,11 +26,15 @@
         },
         "unlocks": {
             "optional": true,
-            "details": "Used to enrich tooltips with account unlocks."
+            "details": "Used to display skin unlocks."
         },
         "inventories": {
             "optional": true,
-            "details": "Used to enrich tooltips with inventory data."
+            "details": "Used to display jade bot unlocks."
+        },
+        "progression": {
+            "optional": true,
+            "details": "Used to display achievements progression."
         }
     }
 }
