Move logging provider to Adapters

--- a/src/Adapters/Adapters.csproj
+++ b/src/Adapters/Adapters.csproj
@@ -12,6 +12,8 @@
     </PackageReference>
     <PackageReference Include="Gw2Sharp" />
     <PackageReference Include="GW2SDK" />
+    <PackageReference Include="Microsoft.Extensions.Logging" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="PolySharp">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
