--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,9 +15,12 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="[3.1.32]" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="[3.1.32]" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="[3.1.32]" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.32" />
     <PackageVersion Include="Microsoft.Extensions.Http" Version="[3.1.32]" />
     <PackageVersion Include="Microsoft.Extensions.Localization" Version="[3.1.32]" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="[3.1.32]" />
+    <PackageVersion Include="Microsoft.Extensions.Logging" Version="3.1.32" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.32" />
+    <PackageVersion Include="Microsoft.Extensions.Options" Version="3.1.32" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageVersion Include="Microsoft.Windows.CsWin32" Version="0.3.183" />
     <PackageVersion Include="Newtonsoft.Json" Version="[13.0.1]" />
