--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,6 +13,7 @@
     <PackageVersion Include="Gw2Sharp" Version="1.7.4" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="[3.1.32]" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="[3.1.32]" />
+    <PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.32" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="[3.1.32]" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="[3.1.32]" />
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.32" />
@@ -29,7 +30,7 @@
     <PackageVersion Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.10" />
     <PackageVersion Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.10" />
     <PackageVersion Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.10" />
-    <PackageVersion Include="System.Collections.Immutable" Version="[1.7.1]" />
+    <PackageVersion Include="System.Collections.Immutable" Version="1.7.1" />
     <PackageVersion Include="System.ComponentModel.Composition" Version="[6.0.0]" />
     <PackageVersion Include="System.Text.Json" Version="9.0.2" />
     <PackageVersion Include="xunit" Version="2.9.3" />
