--- a/src/ChatLinks/manifest.json
+++ b/src/ChatLinks/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Chat Links",
-    "version": "5.2.0",
+    "version": "5.3.0",
     "namespace": "sliekens.chat_links",
     "package": "SL.ChatLinks.dll",
     "manifest_version": 1,
@@ -30,7 +30,7 @@
         },
         "inventories": {
             "optional": true,
-            "details": "Used to display jade bot unlocks."
+            "details": "Used to display the count of items in the bank and in material storage. Also needed to display jade bot unlocks."
         },
         "progression": {
             "optional": true,
