--- a/test/ChatLinks.Tests/ChatLinks.Tests.csproj
+++ b/test/ChatLinks.Tests/ChatLinks.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net472</TargetFramework>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="coverlet.collector">
